; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_ssp16.c_write_XST.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_ssp16.c_write_XST.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EL_SVP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"XST raw w %04x @ %04x\00", align 1
@rPM0 = common dso_local global i32 0, align 4
@rXST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @write_XST to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_XST(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i64 @pm_io(i32 3, i32 1, i64 %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = icmp ne i64 %6, -1
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %17

9:                                                ; preds = %1
  %10 = load i32, i32* @EL_SVP, align 4
  %11 = load i64, i64* %2, align 8
  %12 = call i32 (...) @GET_PPC_OFFS()
  %13 = call i32 @elprintf(i32 %10, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i64 %11, i32 %12)
  %14 = load i32, i32* @rPM0, align 4
  %15 = or i32 %14, 1
  store i32 %15, i32* @rPM0, align 4
  %16 = load i64, i64* %2, align 8
  store i64 %16, i64* @rXST, align 8
  br label %17

17:                                               ; preds = %9, %8
  ret void
}

declare dso_local i64 @pm_io(i32, i32, i64) #1

declare dso_local i32 @elprintf(i32, i8*, i64, i32) #1

declare dso_local i32 @GET_PPC_OFFS(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
